# fencer

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/main/: code_space.c  code_space.h  destreza.c  destreza.h  errors.h  exec_stack.c  exec_stack.h  executor.c  executor.h  main.c
src/main/code_space/: code_space.c  code_space.h  code_space_errors.c  code_space_errors.h
src/main/commands/: arithmetic.c  arithmetic.h  command.c  command.h  int.c  int.h  io.c  io.h
src/main/core/: errors.c  errors.h
src/main/core/arithmetics/: int.c  int.h
src/main/destreza/: destreza.c  destreza.h  destreza_errors.c  destreza_errors.h  destreza_version.c  destreza_version.h
src/main/executor/: executor.c  executor.h  executor_errors.c  executor_errors.h
src/resources/: destreza.json
tests/main/: main.c
tests/main/core/arithmetics/: int.test.c  int.test.h  int_add.test.c  int_add.test.h  int_divide.test.c  int_divide.test.h  int_multiply.test.c  int_multiply.test.h
